--- a/w18.1-Prisma/package.json
+++ b/w18.1-Prisma/package.json
@@ -1,16 +1,7 @@
 {
-  "name": "w18.1-prisma",
-  "version": "1.0.0",
-  "main": "index.js",
-  "scripts": {
-    "dev" : "tsc -b && node ./dist/index.js"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "type": "commonjs",
-  "description": "",
+  "name": "create-p",
+  "version": "0.0.1",
   "dependencies": {
-    "typescript": "^5.7.2"
+    "@prisma/client": "^6.1.0"
   }
 }
